--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iNotebook-Pricing</title>
     <style>
+      .card{
+        background-color: rgb(163, 186, 207);
+      }
       .card:hover {
         background-color: rgb(142, 141, 139);
       }
